[DAEF-375] Implements node-update wording change, default update title & message and fixes layout issues

--- a/app/components/notifications/NodeUpdateNotification.scss
+++ b/app/components/notifications/NodeUpdateNotification.scss
@@ -1,9 +1,9 @@
 .component {
-  //position: relative;
   background-color: $color-primary-bg;
   padding: 20px;
   display: flex;
   flex-direction: column;
+  flex-shrink: 0;
 }
 
 .titleBar {
@@ -14,10 +14,9 @@
   height: 22px;
   font-family: $font-medium;
   font-size: 16px;
-  line-height: 1.38;
+  line-height: 1.5;
   color: $text-color-accent;
   flex-grow: 1;
-  margin-bottom: 10px;
 }
 
 .message {
@@ -44,7 +43,6 @@
   text-align: center;
   color: #fafbfc;
   margin-left: 10px;
-  margin-bottom: 20px;
   cursor: pointer;
 }
 
@@ -67,6 +65,7 @@
 .toggleButton {
   align-self: flex-start;
   cursor: pointer;
+  margin-top: 3px;
 }
 
 .arrow {
